<resources>
    <string name="app_name">Bestowal</string>
    <string name="email">Email</string>
    <string name="email_icon_description">Email</string>
    <string name="password_icon_description">Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="mobile">Mobile Number</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="default_email">user@gmail.com</string>
    <string name="personal_details">Personal Details</string>
    <string name="login_as">Login as:</string>
    <string name="address">Address</string>
    <string name="postcode">Post Code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="dob">Date of Birth</string>
    <string name="user_role">User Role</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="new_product">New Product</string>
    <string name="title">Title</string>
    <string name="title_icon_description">Title</string>
    <string name="price">Price(£)</string>
    <string name="negotiable">Negotiable</string>
    <string name="category">Category</string>
    <string name="free">Is it free</string>
    <string name="add_product">Publish</string>
    <string name="upload_image">Upload Image</string>
    <string name="filename">Filename</string>
    <string name="select_image">Select Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_products">List Products</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="condition">Condition</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="seller_name">Seller Name</string>
    <string name="email_seller">EMAIL SELLER</string>
    <string name="call_seller">CALL SELLER</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="update_status">Update Status</string>
    <string name="sales_list">Sales List</string>
    <string name="location">Location</string>
    <string name="grab_it">Grab It</string>
    <string name="note_password">If you want to change the password, type the new password in the password field otherwise keep that empty</string>
    <string name="search">Search</string>
    <string name="search_state">Search State</string>
    <string name="clear">Clear</string>
    <string name="search_by">Search By</string>
    <string name="image">image</string>
    <string name="logoImage">logoImage</string>
    <string name="image_error">Image Error</string>


</resources>